...
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_running_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="1"
                android:text="@{String.valueOf(movie.runningTime)}"
                android:textColor="@color/black"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <Spinner
        android:id="@+id/sp_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/sp_time_slot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="@id/gl_form" />
...
