...
            android:textSize="24sp"
            android:textStyle="bold"
            android:text ="@{screening.movie.title}"
            tools:text="해리 포터와 마법사의 돌" />

        <TextView
            android:id="@+id/tv_screening_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:startDate="@{screening.movie.startDate}"
...
